# willow-mcp

./: .gitignore  .mcp.json  .mcp.json.example  ARCHITECT.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER.md  Dockerfile  NOTICE  README.md  SECURITY_AUDIT.md  glama.json  pyproject.toml  user.md
.claude/: settings.json
.claude-plugin/: plugin.json
.claude/hooks/: session-start.sh
.cursor/: mcp.json
.github/: pull_request_template.md
.github/workflows/: release.yml  tests.yml
deploy/: kart-worker-batch.service  kart-worker.md  kart-worker.service  willow-mcp-serve.service.template  willow-mcp-worker.service.template  willow-mcp-worker@.service.template
deploy/cursor/: hooks.json
docs/: AGENTS.md  AGENTS_SPECIALIST.md  BUGS.md  NEST.md  OPERATOR-ONBOARD.md  ORIENT_ORCHESTRATOR.md  ROLES.md  SESSION_FLOW.md  WILLOW_TOOL_ROLL.md  mai-conversion-loop.md  markdownai-schema.md
docs/design/: agent-seed-template.json  agent-seed.md  complete-system-packet-2026-07-08.md  gap-backlog.md  guardian-consent-seam.md  hooks-and-skills.md  human-orchestrator.md  integrations.md  kart-lift-spec.md  kart-productionization.md  mcp-review-2026-07-08.md  packet-boot-design-2026-07-09.md  permissions-matrix.md  pgp-and-persona.md  product-layout.md  schema-adaptation.md  security-hardening-review-2026-07-08.md  session-lifecycle.md  slice-backlog.md  specialist-registry.md  trust-architecture.md  ui-concepts-personas.md  ui-concepts.md  willow-bbs-ansi.html  willow-dev-tui.html  willow-gate-seam-h1-spike.py  willow-gate-seam-h2-spike.py  willow-gate-seam-spike.py  willow-gate-seam.md  willow-general-audience.html  willow-linux-ricer.html  willow-mac-native.html  willow-saas-dashboard.html  willow-sco-cde.html  willow-turbo-cpp-dos.html  willow-vim-buffer.html  willow-windows-mmc.html
docs/handoffs/: 2026-07-23-mcp-wiring-and-corpus.md
docs/migrations/: project-collection-aliases.md  willow-2.0-gap-inventory.md
docs/repatriation/: BEHIND_WILLOW.md  BOX_INVENTORY.md  COLLABORATION_VOICES.md  CONSOLIDATION_MATRIX.md  QUESTIONS.md  README.md  SESSION_HANDOFF.md  STARTUP.md  THE_BOOK_OF_WILLOW.md  THE_COLLABORATION.md  VOICES.md  WILLOW_COMPOSE_README.md  handoff-v3-the-assembling.md  session_handoff-2026-07-18_the-assembling.md  stand_up_willow_compose.sh
docs/schema/: agents.postgres.sql  dispatch_tasks.postgres.sql  frank-ledger-prevent-fork.sql  handoff.schema.json  knowledge.postgres.sql  markdownai.schema.json  routing_decisions.postgres.sql  tasks-add-network-authorization.sql  tasks-worker-production.sql  tasks.postgres.sql
docs/story/: README.md  chapter-01-the-seed.md  chapter-02-i-wanna-play-a-game.md  chapter-03-the-game.md  chapter-04-the-second-gardener.md  chapter-05-the-lesson.md  chapter-06-the-grove.md  chapter-07-the-gardener.md
docs/templates/: ASSIGNMENT.template.md  CLOSEOUT.template.md
examples/: signing_client.py
hooks/: pre_tool_use.py
scripts/: TOOL_ROLL.md  mcp_entry_toggle.py  operator-onboard.sh  path_guard.sh  sandbox-bootstrap.sh  willow-serve
scripts/diagnostics/: corpus_map.sh  kb_stats.sh  soil_gaps.py
scripts/ratification/: dump_seals.py  pick_and_check.py  pick_finding.py  (+3 more)
seed/: lineage_willow.py
skills/: brainstorming.md  consent.md  debugging.md  external-guard.md  handoff-write.md  kart-tasks.md  persona-overlays.md  review.md  schema-confirm.md  session-start.md  tdd.md  willow-serve.md  worktree.md
tests/: conftest.py  test_announce.py  test_authority.py  test_authority_surface.py  test_b33_consent_sandbox.py  test_binding_enforcement.py  test_broken_pipe.py  test_calendar_source_gcal.py  test_cli_args.py  test_code_graph.py  test_commitment_ledger.py  test_commitment_membrane_mcp.py  test_commitment_store.py  test_consent.py  test_consent_cli.py  test_context.py  test_core.py  test_db_gate.py  test_deps_freshness.py  test_diagnostic_summary.py  test_dispatch_pg_mirror.py  test_dispatch_stack.py  test_egress_authorization.py  test_egress_cli.py  test_egress_row_gate_postgres.py  test_egress_setup.py  test_exposure.py  test_external_guard.py  test_fleet_kart_sandbox_policy.py  test_forks.py  test_friction.py  test_gaps.py  test_gate.py  test_gates_actions.py  test_gates_html.py  test_gates_panel.py  test_gates_serve.py  test_gates_tui.py  test_governance_continuity.py  test_heartbeat.py  (+65 more)
tools/: README.md  mai_lint.py  mai_metrics.py  mai_prose_split.py  provision_gate.py  wtool.py
(+174 files in other folders)
