[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "willow-mcp"
version = "2.0.0"
description = "Agent-neutral MCP server — SQLite store, Postgres knowledge base, Kart task queue"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Sean Campbell" }]
requires-python = ">=3.11"
keywords = ["mcp", "knowledge-base", "task-queue", "willow", "oauth"]
dependencies = [
    "mcp>=1.28.1,<2.0.0",
    "psycopg2-binary>=2.9,<3.0",
    "cryptography>=42.0,<50.0",
    "starlette>=0.36,<1.0",
    "uvicorn>=0.29,<1.0",
    # Kart task executor (the `willow-mcp worker` engine + task-queue backends).
    # Hard dependency as of B-22 close-out — kartikeya is published on PyPI, so a
    # base `pip install willow-mcp` now ships a working queue drainer.
    "kartikeya>=0.0.1,<0.1.0",
]

[project.scripts]
willow-mcp = "willow_mcp.server:main"
willow-mcp-init = "willow_mcp.home_init:main"

[project.urls]
Homepage = "https://github.com/rudi193-cmd/willow-mcp"

[tool.hatch.build.targets.wheel]
packages = ["src/willow_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
