[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "willow-mcp"
version = "2.0.0"
description = "Agent-neutral MCP server — SQLite store, Postgres knowledge base, Kart task queue"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Sean Campbell" }]
requires-python = ">=3.11"
keywords = ["mcp", "knowledge-base", "task-queue", "willow", "oauth"]
dependencies = [
    "mcp>=1.28.1,<2.0.0",
    "psycopg2-binary>=2.9,<3.0",
    "cryptography>=42.0,<50.0",
    "starlette>=1.3.1,<2.0",
    "uvicorn>=0.29,<1.0",
    # Kart task executor (the `willow-mcp worker` engine + task-queue backends).
    # Hard dependency as of B-22 close-out — kartikeya is published on PyPI, so a
    # base `pip install willow-mcp` now ships a working queue drainer.
    "kartikeya>=0.0.3,<0.1.0",
    "requests>=2.31,<3.0",
]

[project.optional-dependencies]
# The Nest content pipeline (willow_mcp.nest) runs on the stdlib for text, code,
# JSON, and --llm (local Ollama over urllib). These unlock extra source types —
# OCR, PDF, and .docx — and the engine degrades gracefully when they are absent,
# so `pip install willow-mcp` stays lean and `pip install willow-mcp[nest]` opts
# in. System packages tesseract-ocr and poppler-utils are installed separately.
nest = [
    "pytesseract>=0.3.10",
    "Pillow>=10.0.0",
    "pdfplumber>=0.10.0",
    "pdf2image>=1.16.0",
    "python-docx>=1.2.0",
]
web = [
    "requests>=2.31,<3.0",
]

[project.scripts]
willow-mcp = "willow_mcp.server:main"
wmc = "willow_mcp.server:main"
willow-mcp-init = "willow_mcp.home_init:main"
willow-mcp-compile = "willow_mcp.registry:compile_cli_main"
willow-mcp-sign-seed = "willow_mcp.seed_sign:main"
willow-mcp-compile-persona = "willow_mcp.persona_compile:main"
willow-mcp-integrations = "willow_mcp.integrations:main"

[project.urls]
Homepage = "https://github.com/rudi193-cmd/willow-mcp"

[tool.hatch.build.targets.wheel]
packages = ["src/willow_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
